--- a/css/skills.css
+++ b/css/skills.css
@@ -1,6 +1,6 @@
 .skills-container {
-    justify-content: center;
-    box-shadow: 0 8px 32px 0 rgba(127, 224, 165, 0.37);
+  justify-content: center;
+  box-shadow: 0 8px 32px 0 rgba(127, 224, 165, 0.37);
   backdrop-filter: blur(1px);
   -webkit-backdrop-filter: blur(1.5px);
   border-radius: 10px;
@@ -11,8 +11,8 @@
 
 .container {
   width: 90%;
-  padding:5%;
-  margin: 0 auto; 
+  padding: 5%;
+  margin: 0 auto;
   overflow: hidden;
 }
 
@@ -24,106 +24,304 @@
   font-size: 12px;
   line-height: 2em;
   padding: 5% 0;
-} 
-
-.skill { 
-  list-style:none; 
-  padding-top:30px;
 }
 
-.skill li { 
-  margin-bottom:70px; 
-  background:#030303; 
-  height:6px; 
-  border-radius:3px; 
-  border-left:1px solid #111; 
-  border-top:1px solid #111; 
-  border-right:1px solid #333; 
-  border-bottom:1px solid #333;  
+.skill {
+  list-style: none;
+  padding-top: 30px;
 }
 
-.skill li em { 
-  position:relative; 
+.skill li {
+  margin-bottom: 70px;
+  background: #030303;
+  height: 6px;
+  border-radius: 3px;
+  border-left: 1px solid #111;
+  border-top: 1px solid #111;
+  border-right: 1px solid #333;
+  border-bottom: 1px solid #333;
+}
+
+.skill li em {
+  position: relative;
   font-style: normal;
   font-size: 14px;
   text-align: center;
-  color:#dedede;
-  top:-28px;
+  color: #dedede;
+  top: -28px;
 }
 
-.blueline { 
-  height: 3px; 
-  margin: 2px 0; 
-  background:  rgba(0, 255, 213, 0.6); 
+.blueline {
+  height: 3px;
+  margin: 2px 0;
+  background: rgba(0, 255, 213, 0.6);
   position: absolute;
   box-shadow: 0px 0px 10px 1px rgba(0, 238, 255, 0.6);
 }
-.greenline { 
-  height: 3px; 
-  margin: 2px 0; 
-  background: #7fe0a55e; 
+
+.greenline {
+  height: 3px;
+  margin: 2px 0;
+  background: #7fe0a55e;
   position: absolute;
   box-shadow: 0px 0px 10px 1px #84daa65e;
 }
-.redline { 
-  height: 3px; 
-  margin: 2px 0; 
-  background: #c7c18f17; 
+
+.redline {
+  height: 3px;
+  margin: 2px 0;
+  background: #c7c18f17;
   position: absolute;
   box-shadow: 0px 0px 10px 1px #e0a67f;
 }
 
-.titles     { opacity:1;  animation:titles 5s ease-out;     }
-
-
-.html        { width:78%;  animation:html 2s ease-out;       }
-.css         { width:90%;  animation:css 2s ease-out;        }
-.java         { width:75%;  animation:java 2s ease-out;        }
-.javascript  { width:60%;  animation:javascript 2s ease-out; }
-.csharp       { width:80%;  animation:csharp 2s ease-out;     }
-
-.github   { width:95%;  animation:github 2s ease-out;  }
-.azureDev  { width:60%;  animation:azureDev 2s ease-out; }
-.sql      { width:70%;  animation:sql 2s ease-out;     }
-.git     { width:90%;  animation:git 2s ease-out;    }
-
-.vscode { width:90%;  animation:vscode 2s ease-out;}
-.android-studio { width:90%;  animation:android-studio 2s ease-out;}
-.ecclipse   { width:70%;  animation:ecclipse 2s ease-out;  }
-.vs    { width:67%;  animation:vs 2s ease-out;   }
-
-
-@keyframes titles      { 0% { opacity:0; } 100% { opacity:1; }  }
-
-@keyframes html        { 0% { width:0px; } 100% { width:78%; }  }
-@keyframes css         { 0% { width:0px; } 100% { width:90%; }  }
-@keyframes java         { 0% { width:0px; } 100% { width:75%; }  }
-@keyframes javascript  { 0% { width:0px; } 100% { width:60%; }  }
-@keyframes csharp     { 0% { width:0px; } 100% { width:80%; }  }
-
-@keyframes github   { 0% { width:0px; } 100% { width:95%; }  }
-@keyframes azureDev  { 0% { width:0px; } 100% { width:60%; }  }
-@keyframes sql      { 0% { width:0px; } 100% { width:70%; }  }
-@keyframes git     { 0% { width:0px; } 100% { width:90%; }  }
-
-@keyframes vscode { 0% { width:0px; } 100% { width:90%; }  }
-@keyframes android-studio { 0% { width:0px; } 100% { width:90%; }  }
-@keyframes ecclipse   { 0% { width:0px; } 100% { width:70%; }  }
-@keyframes vs    { 0% { width:0px; } 100% { width:67%; }  }
-
-@media (max-width: 1200px){
-  h2 {font-size:2.2em;}
+.titles {
+  opacity: 1;
+  animation: titles 5s ease-out;
 }
-@media (max-width: 980px){
-  h2 {font-size:1.8em;}
+
+
+.html {
+  width: 78%;
+  animation: html 2s ease-out;
 }
-@media (max-width: 767px){
-  h2 {font-size:1.4em; visibility: hidden;}
+
+.css {
+  width: 90%;
+  animation: css 2s ease-out;
 }
-@media (max-width: 580px){
-  h2 {font-size:1.1em; padding:10px 0; visibility: hidden;}
+
+.java {
+  width: 75%;
+  animation: java 2s ease-out;
 }
-@media (max-width: 480px){ 
-  h2 {font-size:2.2em; padding: 10px 0 15px 0; visibility: hidden;}
-  .col {width: 90%;}
+
+.javascript {
+  width: 60%;
+  animation: javascript 2s ease-out;
+}
+
+.csharp {
+  width: 80%;
+  animation: csharp 2s ease-out;
+}
+
+.github {
+  width: 95%;
+  animation: github 2s ease-out;
+}
+
+.azureDev {
+  width: 60%;
+  animation: azureDev 2s ease-out;
+}
+
+.sql {
+  width: 70%;
+  animation: sql 2s ease-out;
+}
+
+.git {
+  width: 90%;
+  animation: git 2s ease-out;
+}
+
+.vscode {
+  width: 90%;
+  animation: vscode 2s ease-out;
+}
+
+.android-studio {
+  width: 90%;
+  animation: android-studio 2s ease-out;
+}
+
+.ecclipse {
+  width: 70%;
+  animation: ecclipse 2s ease-out;
+}
+
+.vs {
+  width: 67%;
+  animation: vs 2s ease-out;
+}
+
+
+@keyframes titles {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes html {
+  0% {
+    width: 0px;
+  }
+
+  100% {
+    width: 78%;
+  }
+}
+
+@keyframes css {
+  0% {
+    width: 0px;
+  }
+
+  100% {
+    width: 90%;
+  }
+}
+
+@keyframes java {
+  0% {
+    width: 0px;
+  }
+
+  100% {
+    width: 75%;
+  }
+}
+
+@keyframes javascript {
+  0% {
+    width: 0px;
+  }
+
+  100% {
+    width: 60%;
+  }
+}
+
+@keyframes csharp {
+  0% {
+    width: 0px;
+  }
+
+  100% {
+    width: 80%;
+  }
+}
+
+@keyframes github {
+  0% {
+    width: 0px;
+  }
+
+  100% {
+    width: 95%;
+  }
+}
+
+@keyframes azureDev {
+  0% {
+    width: 0px;
+  }
+
+  100% {
+    width: 60%;
+  }
+}
+
+@keyframes sql {
+  0% {
+    width: 0px;
+  }
+
+  100% {
+    width: 70%;
+  }
+}
+
+@keyframes git {
+  0% {
+    width: 0px;
+  }
+
+  100% {
+    width: 90%;
+  }
+}
+
+@keyframes vscode {
+  0% {
+    width: 0px;
+  }
+
+  100% {
+    width: 90%;
+  }
+}
+
+@keyframes android-studio {
+  0% {
+    width: 0px;
+  }
+
+  100% {
+    width: 90%;
+  }
+}
+
+@keyframes ecclipse {
+  0% {
+    width: 0px;
+  }
+
+  100% {
+    width: 70%;
+  }
+}
+
+@keyframes vs {
+  0% {
+    width: 0px;
+  }
+
+  100% {
+    width: 67%;
+  }
+}
+
+@media (max-width: 1200px) {
+  h2 {
+    font-size: 2.2em;
+  }
+}
+
+@media (max-width: 980px) {
+  h2 {
+    font-size: 1.8em;
+  }
+}
+
+@media (max-width: 767px) {
+  h2 {
+    font-size: 1.4em;
+    visibility: hidden;
+  }
+}
+
+@media (max-width: 580px) {
+  h2 {
+    font-size: 1.1em;
+    padding: 10px 0;
+    visibility: hidden;
+  }
+}
+
+@media (max-width: 480px) {
+  h2 {
+    font-size: 2.2em;
+    padding: 10px 0 15px 0;
+    visibility: hidden;
+  }
+
+  .col {
+    width: 90%;
+  }
 }
